k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penlight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: penlight
  template:
    metadata:
      labels:
        app: penlight
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: penlight
          image: ${HARBOR_REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}
          volumeMounts:
            - name: gcp-sa-volume
              mountPath: /app/secret
              readOnly: true
          ports:
            - containerPort: 3000
      volumes:
        - name: gcp-sa-volume
          secret:
            secretName: gcp-sa-key
